--- a/src/index.css
+++ b/src/index.css
@@ -27,10 +27,6 @@ main {
     
 }
 
-.nav-link-highlighted{
-    background-color: blue;
-}
-
 .ulForCards {
     display: flex;
     justify-content:space-evenly;
@@ -40,6 +36,8 @@ main {
 
 .projList{
     list-style: none;
+    margin: 1% .5% 1% .5%;
+    border: 2px solid black;
 }
 
 /* .projImg {
